--- a/app/app/app.less
+++ b/app/app/app.less
@@ -2,8 +2,25 @@
 @import "chat/chat.less";
 @import "register/register.less";
 @import "login/login.less";
-@import "components/header/header.less";
 
+body{
+  background-color: #eee !important;
+  overflow-y: scroll;
+}
+
+.login-box{
+    max-width: 380px;
+    background-color: white;
+    border-radius: 2x;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    padding: 2em;
+    margin: 3em auto 2em auto;
+}
+.title{
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 20pt;
+}
 input {
   color:black;
 }
